# terminal-bench-rl

./: .gitignore  .gitmodules  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  tbench_eval_run_results.json  training_metrics.db
dataset/: convert_dataset_to_tasks.py  tasks_to_parquet_converter.py
docs/: llm_judge_switching_readme.md  multi_node_training_walkthrough.md  single_node_training_walkthrough.md
docs/rllm_specific/: rllm_configuration_explained.md  rllm_termination_reasons.md  understanding_of_agents_and_envs.md
evaluation/llm_as_a_judge_evals/: .gitignore  README.md  config.yaml  judge_eval.py  parse_judge_data.py  report.py  results_store.py
evaluation/terminal_bench_eval/: run_eval.sh  terminal_agent.py
helpful_agent_instructions/: remote_gpu_details.md
src/agent_core/: load_sys_msg.py  system_prompt.md
src/agent_core/env_components/: action_factory.py  action_handler.py  action_parser.py  actions.py  command_executor.py  file_manager.py  search_manager.py  step_executor.py
src/tbench_rllm/: agent_env_dtos.py  docker_cleanup.py  docker_env.py  load_tasks.py  terminal_agent.py
src/tbench_rllm/metrics/: metrics_db.py  metrics_logger.py  report.py
src/tbench_rllm/rewards/: __init__.py  calculate_reward.py  judge_backend.py  judge_reward.py  test_reward.py
src/tbench_rllm/rewards/judge_prompts/: README.md  versions.json  (+4 more)
test_tasks/hello-world/: test_weights.json
training_scripts/: download_model.py  launch_training.py  patch_rllm_mappings.py  switch_judge_backend.py  train_terminal_bench_grpo_rllm.sh  upload_checkpoint.py
(+18 files in other folders)
